fix spacing and responsiveness

--- a/src/common/pages/_market.scss
+++ b/src/common/pages/_market.scss
@@ -18,3 +18,10 @@ thead, .pagination {
         font-size: 12px;
     }
 }
+
+.w-sm-75 {
+    width: 100%;
+    @media (min-width: $sm-break) {
+        width: 75%;
+    }
+}
